[project]
name = "manin-main"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "manim (>=0.19.0,<0.20.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "gtts (>=2.5.4,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
# Add src/ so "from parsers..." works
pythonpath = ["src"]
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]
